adding sensor info to modals

--- a/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="check-block form-group">
-    <div (click)="toggle()" [ngClass]="{'chk-checked' : value}" ng-style="chkstyle" class="jcf-unselectable chk-area">
+    <div (click)="toggle()" [ngClass]="{'chk-checked' : value, 'chk-disabled' : disabled}" ng-style="chkstyle" class="jcf-unselectable chk-area">
       <span></span>
     </div>
 
