--- a/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/sensor/sensor.component.html
@@ -78,12 +78,12 @@
         </ul>
       </div>
 
-      <div *ngIf="mode === 'WRITE'" class="btn-holder" style="text-align: right;">
+      <div *ngIf="isAdmin && mode === 'WRITE'" class="btn-holder" style="text-align: right;margin-bottom: 40px;">
         <button *ngIf="!newInstance" type="button" class="btn btn-default" (click)="handleOnCancel()">Cancel</button>
         <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()"
           [disabled]="!ngForm.valid || sensor.wavelengths.length === 0">Apply</button>
       </div>
-      <div *ngIf="mode === 'READ'" class="btn-holder" style="text-align: right;">
+      <div *ngIf="isAdmin && mode === 'READ'" class="btn-holder" style="text-align: right;margin-bottom: 40px;">
         <button type="submit" class="btn btn-primary" (click)="handleOnEdit()">Edit</button>
       </div>
     </form>
