--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -46,14 +46,22 @@
 
       <div class="row">
         <div class="col-md-12">
-          <label>Date/Time: </label> &nbsp; {{product.dateTime | idmdate}}
+          <label>Creation Date: </label> &nbsp; {{product.dateTime | idmdate : "MMM dd, yyyy"}}
+        </div>
+      </div>
+      
+      <div class="row">
+        <div class="col-md-12">
+          <label>Collection Date: </label> &nbsp; {{product.collectionDate | idmdate : "MMM dd, yyyy"}}
         </div>
       </div>
 
+      
       <div class="row">
-        <div class="col-md-12">
-          <label>Sensor Information:</label>
-          <table class="table table-bordered">
+        <div class="col-md-6">
+          <label>Sensor:</label>
+          
+          <table *ngIf="product.sensor" class="table table-bordered">
             <tbody>
               <tr>
                 <td>Name</td>
@@ -67,14 +75,67 @@
                 <td>Model</td>
                 <td>{{product.sensor.model}}</td>
               </tr>
-              <tr>
-                <td>Description</td>
-                <td>{{product.sensor.description}}</td>
-              </tr>
+<!--               <tr> -->
+<!--                 <td>Description</td> -->
+<!--                 <td>{{product.sensor.description}}</td> -->
+<!--               </tr> -->
             </tbody>
           </table>
+          
+          <p *ngIf="!product.sensor" style="font-style:italic;">Sensor metadata is not available for this collection.</p>
+        </div>
+        
+        <div class="col-md-6">
+          <label>Platform:</label>
+          
+          <table *ngIf="product.platform" class="table table-bordered">
+            <tbody>
+              <tr>
+                <td>Name</td>
+                <td><a [routerLink]="['/site/platform', product.platform.oid]" target="_blank">{{product.platform.name}}</a></td>
+              </tr>
+              <tr>
+                <td>Type</td>
+                <td> {{product.platform.platformType.name}}</td>
+              </tr>
+<!--               <tr> -->
+<!--                 <td>Description</td> -->
+<!--                 <td>{{product.platform.description}}</td> -->
+<!--               </tr> -->
+            </tbody>
+          </table>
+          
+          <p *ngIf="!product.platform" style="font-style:italic;">Platform metadata is not available for this collection.</p>
         </div>
       </div>
+      
+      
+      <div class="row">
+        <div class="col-md-12">
+          <label>UAV:</label>
+          
+          <table *ngIf="product.uav" class="table table-bordered">
+            <tbody>
+              <tr>
+                <td>Serial Number</td>
+                <td><a [routerLink]="['/site/uav', product.uav.oid]" target="_blank">{{product.uav.serialNumber}}</a></td>
+              </tr>
+              <tr>
+                <td>Type</td>
+                <td> {{product.uav.faaNumber}}</td>
+              </tr>
+<!--               <tr> -->
+<!--                 <td>Description</td> -->
+<!--                 <td>{{product.uav.description}}</td> -->
+<!--               </tr> -->
+            </tbody>
+          </table>
+          
+          <p *ngIf="!product.platform" style="font-style:italic;">UAV metadata is not available for this collection.</p>
+          
+        </div>
+      </div>
+      
 
       <!-- <div class="row">
       <div class="col-md-12">
