--- a/uasdm-web/src/main/ng2/src/app/site/component/uav/uav.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/uav/uav.component.html
@@ -58,12 +58,12 @@
             </option>
           </select>
         </div>
-        <div *ngIf="mode === 'WRITE'" class="btn-holder" style="text-align: right;">
+        <div *ngIf="isAdmin && mode === 'WRITE'" class="btn-holder" style="text-align: right;">
           <button *ngIf="!newInstance" type="button" class="btn btn-default" (click)="handleOnCancel()">Cancel</button>
           <button type="submit" class="btn btn-primary" (click)="handleOnSubmit()"
             [disabled]="!ngForm.valid">Apply</button>
         </div>
-        <div *ngIf="mode === 'READ'" class="btn-holder" style="text-align: right;">
+        <div *ngIf="isAdmin && mode === 'READ'" class="btn-holder" style="text-align: right;">
           <button type="submit" class="btn btn-primary" (click)="handleOnEdit()">Edit</button>
         </div>
       </form>
