--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/product-modal.component.html
@@ -121,7 +121,7 @@
                 <td><a [routerLink]="['/site/uav', product.uav.oid]" target="_blank">{{product.uav.serialNumber}}</a></td>
               </tr>
               <tr>
-                <td>Type</td>
+                <td>FAA Number</td>
                 <td> {{product.uav.faaNumber}}</td>
               </tr>
 <!--               <tr> -->
