--- a/uasdm-web/src/main/ng2/src/app/site/component/report/reports.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/report/reports.component.html
@@ -6,7 +6,7 @@
 		<h2>Report</h2>
 
 		<div class="row">
-            <input class="btn btn-primary pull-right" type="submit" value="Export CSV" (click)="onExportCSV()">
+            <input class="btn btn-primary pull-right" style="margin-bottom:10px;margin-right:10px;" type="submit" value="Export CSV" (click)="onExportCSV()">
         </div>
 
         <div class="row">
