added title and fixed prop file

--- a/uasdm-web/src/main/ng2/src/app/shared/component/modal/notification-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/modal/notification-modal.component.html
@@ -1,5 +1,6 @@
 <div>
   <div class="modal-body" style="margin-top: 30px; margin-bottom: 30px;">
+    <h1 *ngIf="messageTitle" style="margin-top: 20px;margin-bottom: 10px;">{{messageTitle}}</h1>
     <p>{{message}}</p>
   </div>
   <div class="modal-footer">
