Forgotten files from previous commit

--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -243,10 +243,10 @@
           <div class="btn-holder" style="margin: 20px 20px 10px 20px;">
             <div class="row">
               <div class="col-sm-2">
-                <button *ngIf="!entity.metadataUploaded" type="button" class="btn btn-warning"
+                <button type="button" class="btn btn-warning"
                   [disabled]="processRunning" (click)="handleSetMetadata()">
-                  <i class="fa fa-plus" style="color:white"></i>
-                  Add Metadata
+                  <i class="fa fa-edit" style="color:white"></i>
+                  Edit Metadata
                 </button>
               </div>
               <div class="col-md-10" style="text-align: right;">
