--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/metadata-modal.component.html
@@ -1,6 +1,21 @@
 <div>
     <div class="modal-body" tabindex="-1" role="dialog">
 
+        <div *ngIf="isOldFormat" class="row error-container">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <div class="label-holder">
+                    <strong style="color:#c7a717;">Information</strong>
+                </div>
+                <div class="holder">
+                    <div>
+                        <p style="color:#c7a717;">The metadata was originally submitted in an out of date format and needs to be re-entered</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-2"></div>
+        </div>
+
 
         <div *ngIf="message != null && message.length > 0" class="row error-container">
             <div class="col-md-2"></div>
